# gilgamesh

./: .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/ball_and_stick/: CMakeLists.txt
examples/basic_mesh/: CMakeLists.txt  main.cpp
examples/data/: build_all.py  cube.blend  cube.fbx  getter.bat  weights.blend  weights.fbx
examples/fbx_dump/: CMakeLists.txt  main.cpp
examples/fbx_loader/: CMakeLists.txt  main.cpp
examples/gilgamol/: CMakeLists.txt  molecules.hpp
examples/molecules/: 2ptc.h  CMakeLists.txt  main.cpp  molecules.hpp  utils.hpp
examples/solvent_excluded/: main.cpp
include/: utils.hpp
include/gilgamesh/: mesh.hpp
include/gilgamesh/decoders/: fbx_decoder.hpp  pdb_decoder.hpp
include/gilgamesh/encoders/: ply_encoder.hpp
include/gilgamesh/shapes/: sphere.hpp  spline.hpp
include/meshutils/: box.hpp  cylinder.hpp  fbxFile.hpp  fbx_file.hpp  mesh.hpp  pdb_file.hpp  scene.hpp  sphere.hpp
include/meshutils/decoders/: fbx_decoder.hpp  pdb_decoder.hpp
include/meshutils/encoders/: fbx_encoder.hpp  ply_encoder.hpp
include/meshutils/shapes/: box.hpp  cylinder.hpp
test/: CMakeLists.txt  shapes.cpp
